tests/semantic/rel_record/rel_record.err
Warning: Output relations with record types cannot be output precisely. Attribute a has record type List in file rel_record.dl at line 6
.decl X(a:List) output
----------^------------
Error: Input relations must not have record types. Attribute a has record type List in file rel_record.dl at line 9
.decl Y(a:List, b:number, c:List) input
----------^-----------------------------
Error: Input relations must not have record types. Attribute c has record type List in file rel_record.dl at line 9
.decl Y(a:List, b:number, c:List) input
----------------------------^-----------
Error: Input relations must not have record types. Attribute a has record type List in file rel_record.dl at line 12
.decl Z(a:List, b:List) input output
----------^--------------------------
Warning: Output relations with record types cannot be output precisely. Attribute a has record type List in file rel_record.dl at line 12
.decl Z(a:List, b:List) input output
----------^--------------------------
Error: Input relations must not have record types. Attribute b has record type List in file rel_record.dl at line 12
.decl Z(a:List, b:List) input output
------------------^------------------
Warning: Output relations with record types cannot be output precisely. Attribute b has record type List in file rel_record.dl at line 12
.decl Z(a:List, b:List) input output
------------------^------------------
4 errors generated, evaluation aborted
