tests/semantic/rel_record/rel_record.dl
.type List = [a:number, b:List]

.decl W(a:List, b:number, c:List) printsize
W(nil,1,nil).

.decl X(a:List) output
X(nil).

.decl Y(a:List, b:number, c:List) input
Y(nil,1,nil). 

.decl Z(a:List, b:List) input output
Z(nil,nil).


